# ICCA_prediction

./: README.md  analyze_binary_classifications.py  crossval.py  downloads.py  main.sh  pyproject.toml  run_cv.py  run_pipeline.py  run_validation.py  utils.py
csv_labels/: TCGA_chol_final_transcripto_hemstem.csv  heptastem_testsplit.csv  validation_mondor.csv
paper_items_scripts/: extract_main_table.py  extract_validation_results.py  generate_all_paper_items.py  plot_figure3.py
